# shell-use

./: .gitattributes  .gitignore  Cargo.toml  README.md  SKILL.md  package-lock.json
.github/workflows/: ci.yml  release.yml
Formula/: shell-use.rb
bindings/js/: README.md  package-lock.json  package.json  tsconfig.json
bindings/js/src/: client.ts  config.ts  errors.ts  index.ts  protocol.ts  sessions.ts  transport.ts  types.ts  version.ts
bindings/js/test/: conformance.test.mjs  integration.test.mjs  protocol.test.mjs
bindings/python/: README.md  pyproject.toml
bindings/python/src/shell_use/: __init__.py  _config.py  _protocol.py  _transport.py  client.py  errors.py  types.py
bindings/python/tests/: test_conformance.py  test_integration.py  test_protocol.py
install/: install.ps1  install.sh
shell/: shellIntegration-env.zsh  shellIntegration-login.zsh  shellIntegration-profile.zsh  shellIntegration-rc.zsh  shellIntegration.bash  shellIntegration.elv  shellIntegration.fish  shellIntegration.nu  shellIntegration.ps1  shellIntegration.xsh
src/: agent_context.rs  cli.rs  config.rs  main.rs  monitor.rs  protocol.rs  skill.rs
src/assert/: color.rs  mod.rs  snapshot.rs
src/daemon/: logger.rs  mod.rs  session.rs
src/input/: keys.rs  mod.rs  mouse.rs
src/ipc/: mod.rs
src/render/: mod.rs  nerd_font.rs  svg.rs
src/shell/: mod.rs
src/terminal/: emu.rs  integration.rs  locator.rs  mod.rs  pty.rs
src/trace/: recorder.rs
